--- a/src/components/AboutMe/Content.module.css
+++ b/src/components/AboutMe/Content.module.css
@@ -1,9 +1,9 @@
 .container {
-    width: 70%;
-    margin: 9em 5em 0 8em;
+    width: 75%;
+    margin: 9em 10em 0 8em;
 }
 
 .btn_container {
-    margin: 5em 0;
+    margin: 10em 0 5em;
     float: right;
 }
