--- a/src/components/AboutMe/SideBar.module.css
+++ b/src/components/AboutMe/SideBar.module.css
@@ -2,9 +2,9 @@
     width: 30%;
     margin: 2em 0;
     height: 90%;
-    padding: 3em;
+    /* padding-top: 2em; */
     background-color: #353534;
-    border-radius: 3em;
+    /* border-radius: 3em; */
 }
 
 .side_bar_container {
@@ -20,16 +20,16 @@
 .profile_photo {
     background-image: url('../../assets/profile.jpg');
     width: 70%;
-    height: 95%;
+    height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
-    border-radius: 20px;
-    margin: 2.5em auto;
+    /* border-radius: 3em; */
+    margin: 5em auto 2.5em;
 }
 
 .info_container{
     width: 100%;    
-    height: 40%;
-    margin: auto;
+    height: 30%;
+    margin: 2em auto;
     align-content: center;
 }
