--- a/src/pages/styles/Resume.module.css
+++ b/src/pages/styles/Resume.module.css
@@ -1,15 +1,18 @@
 .resume_container {
     display: flex;
+    height: 90%;
+    margin: 7em auto;
+    justify-content: space-between;
 }
 
 .resume_introduction {
-    width: 60%;
-    margin: 8em 10em 5em 20em;
+    width: 50%;
+    margin-left: 10em;
 }
 
 .education_and_skills_container {
-    width: 40%;
-    margin: 8em 20em 5em 10em;
+    width: 30%;
+    margin-right: 10em;
 }
 
 .label {
