--- a/src/components/UI/Navigation.module.css
+++ b/src/components/UI/Navigation.module.css
@@ -7,6 +7,7 @@
     width: 90%;
     margin: 0 auto;
     height: 3%;
+    position: relative;
 }
 
 .items {
@@ -14,6 +15,7 @@
     justify-content: space-evenly;
     align-items: center;
     padding: 0;
+    height: 60em;
 }
 
 .items li {
@@ -21,4 +23,57 @@
     padding: 0 13px;
     font-size: 1.7em;
     color: antiquewhite;
+    margin: 1em;
+}
+
+.burgerMenu {
+    display: none;
+    background: none;
+    border: none;
+    font-size: 4em;
+    color: antiquewhite;
+    cursor: pointer;
+}
+
+.closeMenu {
+    display: none;
+    background: none;
+    border: none;
+    font-size: 5em;
+    color: antiquewhite;
+    cursor: pointer;
+    position: absolute;
+    top: 0.5em;
+    right: 1em;
+}
+
+/* Media Query for screen width less than 900px */
+@media (max-width: 900px) {
+    .items {
+        display: none; /* Hide items by default on small screens */
+        flex-direction: column; /* Stack items vertically */
+        width: 100%;
+        height: 100vh; /* Full viewport height */
+        justify-content: center; /* Center items vertically */
+        position: fixed; /* Fix position to cover entire screen */
+        top: 0;
+        left: 0;
+        background: #6a6666f0; /* Background color */
+        z-index: 1000; /* Ensure it is on top of other content */
+    }
+
+    .navbar{
+        justify-content: start;
+    }
+    .items.show {
+        display: flex; /* Show items when menu is open */
+    }
+
+    .burgerMenu {
+        display: block; /* Show burger menu on small screens */
+    }
+
+    .closeMenu {
+        display: block; /* Show close button on small screens */
+    }
 }
