--- a/src/App.css
+++ b/src/App.css
@@ -7,24 +7,26 @@ main {
   height: 80%;
 }
 
-body{
+body {
   font-size: 10px;
   background-color: #242321;
   height: 100%;
 }
 
-html{
+html {
   height: 100%;
 }
 
-#root{
+#root {
   height: 100%;
 }
 
 
 
 /* Ensure full height for all elements */
-html, body, #root {
+html,
+body,
+#root {
   height: 100%;
   margin: 0;
 }
@@ -44,7 +46,7 @@ body {
   justify-content: space-between;
 }
 
-@media(max-width: 900px) {
+@media(max-width: 941px) {
   .about-me-container {
     flex-direction: column;
     width: 90%;
