--- a/src/components/AboutMe/Introduction.module.css
+++ b/src/components/AboutMe/Introduction.module.css
@@ -1,41 +1,71 @@
 .container p {
-    font-size: 9em;
-    color: #C5CED4;
-    height: 100%;
+  font-size: 8em;
+  color: #C5CED4;
+  height: 100%;
+}
+
+.container p:nth-of-type(3) {
+  font-size: 2.8em;
+  color: #c5ced4bd;
+  font-weight: normal;
+}
+.container p:nth-of-type(2) {
+  margin-bottom: 0.5em;
+}
+
+
+span {
+  color: #f9bf42c5;
+}
+
+@media(max-width: 1590px) {
+
+  .container p {
+    font-size: 7em;
   }
-  
+
   .container p:nth-of-type(3) {
-    font-size: 9em;
-    color: #F9BE42;
+    font-size: 2.6em;
   }
-  
-  @media(max-width: 1550px) {
-    .container p,
-    .container p:nth-of-type(3) {
-      font-size: 7em;
-    }
-  }
-  
-  @media(max-width: 1530px) {
-    .container p,
-    .container p:nth-of-type(3) {
-      font-size: 6em;
-    }
-  }
-  
-  @media(max-width: 1005px) {
-    .container p,
-    .container p:nth-of-type(3) {
-      font-size: 5em;
-    }
+}
+
+@media(max-width: 1405px) {
+
+  .container p {
+    font-size: 6em;
   }
 
-  @media(max-width: 900px) {
-    .container p,
-    .container p:nth-of-type(3) {
-      font-size: 4em;
-    }
+  .container p:nth-of-type(3) {
+    font-size: 2.5em;
   }
-  
+}
 
-  
+@media(max-width: 1260px) {
+
+  .container p {
+    font-size: 4em;
+  }
+
+  .container p:nth-of-type(3) {
+    font-size: 2.3em;
+  }
+}
+@media(max-width: 1140px) {
+  .container{
+    width: 30em;
+  }
+
+  .container p {
+    font-size: 3em;
+  }
+
+  .container p:nth-of-type(3) {
+    font-size: 2em;
+  }
+}
+
+@media(max-width: 940px){
+  .container{
+    width: 100%;
+  }
+}
