--- a/src/components/AboutMe/SideBar.module.css
+++ b/src/components/AboutMe/SideBar.module.css
@@ -1,5 +1,5 @@
 .container {
-    width: 55em;
+    width: 50em;
     margin: 2em 0;
     height: 70em;
     background-color: #353534;
@@ -19,6 +19,7 @@
     background-repeat: no-repeat;
     margin: 5em auto 2.5em;
     background-position: center;
+    aspect-ratio: 16 / 4 !important;
 }
 
 .info_container {
@@ -45,14 +46,12 @@
 }
 
 @media(max-width: 1530px) {
-    .container {
-        width: 92em;
-    }
+   
 }
 
-@media(max-width: 900px) {
+@media(max-width: 940px) {
     .profile_photo_container {
-        height: 50em;
+        height: 40em;
     }
 
     .container {
@@ -63,7 +62,7 @@
     }
 
     .profile_photo {
-        height: 50em;
+        height: 40em;
         margin: 2em auto 2.5em;
         background-size: contain;
     }
