--- a/src/components/Resume/Skill.module.css
+++ b/src/components/Resume/Skill.module.css
@@ -2,3 +2,12 @@
     width: 100px;
     height: 100px;
 }
+
+
+@media (max-width:940px) {
+    .skill img {
+        width: 70px;
+        height: 70px;
+        margin: 2em;
+    }
+}
