--- a/src/components/UI/Button.css
+++ b/src/components/UI/Button.css
@@ -1,11 +1,11 @@
 .button {
     font-size: 1.2em;
     padding: 0.5rem 1.5rem;
-    border: 0.15em solid transparent;
+    border: 0.1em solid transparent;
     border-radius: 50em;
     background-color: transparent;
-    color: #c5ced4;
-    font-weight: bolder;
+    color: #c5ced481;
+    font-weight: medium;
     width: 10em;
     height: 2.5em;
     text-decoration: none;
@@ -27,4 +27,11 @@
     font-weight: bolder;
     width: 100%;
     height: 4em;
+}
+
+@media(max-width: 940px) {
+    .button{
+        border: none;
+        font-size: 2em;
+    }
 }
