--- a/src/pages/styles/Resume.module.css
+++ b/src/pages/styles/Resume.module.css
@@ -51,7 +51,7 @@
 @media (max-width: 1400px) {
     .resume_container {
         flex-direction: column;
-
+        margin-top: 1em;
     }
 
     .education_and_skills_container {
