--- a/src/components/AboutMe/Introduction.module.css
+++ b/src/components/AboutMe/Introduction.module.css
@@ -2,12 +2,15 @@
   font-size: 8em;
   color: #C5CED4;
   height: 100%;
+  line-height: 1;
+  font-weight: 500;
 }
 
 .container p:nth-of-type(3) {
   font-size: 2.8em;
   color: #c5ced4bd;
-  font-weight: normal;
+  font-weight: 400;
+  line-height: 1.3;
 }
 .container p:nth-of-type(2) {
   margin-bottom: 0.5em;
