--- a/src/components/AboutMe/SideBarInfo.module.css
+++ b/src/components/AboutMe/SideBarInfo.module.css
@@ -1,7 +1,7 @@
 .info_text {
-    font-size: 2.2em;
+    font-size: 2em;
     color: #C5CED4;
-    font-weight: normal;
+    font-weight: 400;
     padding: 1em 0.7em;
     border-top: 0.05em solid #91a8c07b;
     width: 70%;
