--- a/src/components/UI/Button.css
+++ b/src/components/UI/Button.css
@@ -5,28 +5,46 @@
     border-radius: 50em;
     background-color: transparent;
     color: #c5ced481;
-    font-weight: medium;
+    font-weight: 400;
     width: 10em;
     height: 2.5em;
     text-decoration: none;
+    transition: color 0.3s ease; 
+}
+
+.button:hover{
+    color: #c5ced4c2;
 }
 
 .active {
     border-color: #F9BE42;
     color: #F9BE42;
-
+    transition: color 0.3s ease, border-color 0.3s ease; 
 }
+
+.active:hover {
+    border-color: #a98029;
+    color: #a98029;
+}
+
 
 .button_active_big {
     font-size: 2em;
     padding: 0.5rem 1.5rem;
-    border: 0.15em solid #F9BE42;
+    border: 0.1em solid #F9BE42;
     border-radius: 50px;
     background-color: transparent;
     color: #F9BE42;
-    font-weight: bolder;
+    font-weight: 500;
     width: 100%;
     height: 4em;
+    cursor: pointer;
+    transition: color 0.3s ease, border-color 0.3s ease; 
+}
+
+.button_active_big:hover{
+    border-color: #a98029;
+    color: #a98029;
 }
 
 @media(max-width: 940px) {
