projects page finished

--- a/src/components/AboutMe/SideBar.module.css
+++ b/src/components/AboutMe/SideBar.module.css
@@ -29,6 +29,16 @@
     align-content: center;
 }
 
+.info_text {
+    font-size: 2em;
+    color: #C5CED4;
+    font-weight: 400;
+    padding: 1em 0.7em;
+    border-top: 0.05em solid #91a8c07b;
+    width: 70%;
+    margin: 0 auto;
+}
+
 @media(max-width: 1650px) {
     .container {
         height: 90%;
