--- a/src/components/AboutMe/Content.module.css
+++ b/src/components/AboutMe/Content.module.css
@@ -1,23 +1,42 @@
 .container {
-    width: 100em;
-    margin: 9em 10em 0 8em;
+    width: 70%;
+    margin: 9em 10em 2em 8em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .btn_container {
-    margin: 10em 0 5em;
-    float: right;
+    width: 50%;
+}
+@media(max-width: 1600px) {
+    .btn_container {
+        width: 100%;
+    }
+
+    .container{
+        margin: 12em 4em 2em 4em;
+    }
+}
+
+@media(max-width: 1200px) {
+    .btn_container {
+       font-size: 0.7em;
+    }
+    .btn_container button {
+        padding: 1rem auto;
+     }
 }
 
 @media(max-width: 940px) {
     .container {
-        width: 100%;
-        margin: 0;
+        width: 90%;
+        margin: 0 auto;
+        gap: 1em;
     }
 
     .btn_container {
         margin: 2em 0;
-        float: none;
-        text-align: center;
-        width: 35em;
+        font-size: 0.7em;
     }
 }
