--- a/src/components/AboutMe/Introduction.module.css
+++ b/src/components/AboutMe/Introduction.module.css
@@ -1,36 +1,30 @@
 .container p {
   font-size: 8em;
   color: #C5CED4;
-  height: 100%;
   line-height: 1;
   font-weight: 500;
 }
 
-.container p:nth-of-type(3) {
+.container p:nth-of-type(2) {
+  margin-bottom: 0.5em;
+}
+
+.container p:nth-of-type(3),
+.container p:nth-of-type(4) {
   font-size: 2.8em;
   color: #c5ced4bd;
   font-weight: 400;
   line-height: 1.3;
 }
-.container p:nth-of-type(2) {
-  margin-bottom: 0.5em;
-}
-
 
 span {
   color: #f9bf42c5;
 }
 
-@media(max-width: 1590px) {
-
-  .container p {
-    font-size: 7em;
-  }
-
-  .container p:nth-of-type(3) {
-    font-size: 2.6em;
-  }
+.hidden{
+  display: none;
 }
+
 
 @media(max-width: 1405px) {
 
@@ -43,24 +37,9 @@ span {
   }
 }
 
-@media(max-width: 1260px) {
 
-  .container p {
-    font-size: 4em;
-  }
+@media(max-width: 1200px) {
 
-  .container p:nth-of-type(3) {
-    font-size: 2.3em;
-  }
-}
-@media(max-width: 1140px) {
-  .container{
-    width: 30em;
-  }
-
-  .container p {
-    font-size: 3em;
-  }
 
   .container p:nth-of-type(3) {
     font-size: 2em;
