--- a/src/components/AboutMe/SideBar.module.css
+++ b/src/components/AboutMe/SideBar.module.css
@@ -1,31 +1,38 @@
 .container {
     width: 50em;
     margin: 2em 0;
-    height: 70em;
     background-color: #353534;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 2em;
 }
 
 .profile_photo_container {
     width: 100%;
     margin: 0 auto;
-    height: 60%;
+    height: 70%;
 }
 
 .profile_photo {
-    background-image: url('../../assets/profile.jpg');
-    width: 70%;
+    background-image: url(/src/assets/profile.jpg);
+    width: 68%;
     height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
-    margin: 5em auto 2.5em;
+    margin: 0 auto;
     background-position: center;
     aspect-ratio: 16 / 4 !important;
 }
 
 .info_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1em;
     width: 100%;
-    height: 30%;
-    margin: 2em auto;
+    height: 25%;
+    margin: 0 auto;
     align-content: center;
 }
 
@@ -39,36 +46,10 @@
     margin: 0 auto;
 }
 
-@media(max-width: 1650px) {
-    .container {
-        height: 90%;
-    }
-
-    .profile_photo_container {
-        width: 100%;
-        height: 51%;
-    }
-
-    .profile_photo {
-        width: 60%;
-        height: 100%;
-    }
-}
-
-@media(max-width: 1530px) {
-   
-}
-
 @media(max-width: 940px) {
-    .profile_photo_container {
-        height: 40em;
-    }
-
     .container {
-        width: 100%;
-        height: auto;
-        display: flex;
-        flex-direction: column;
+        margin: 3em auto;
+        width: 90%;
     }
 
     .profile_photo {
