--- a/src/components/Projects/Content.module.css
+++ b/src/components/Projects/Content.module.css
@@ -9,7 +9,6 @@
     gap: 0.75rem;
 }
 
-
 .categoryButton,
 .categoryButtonActive {
     padding: 0.75em 4.75em;
@@ -43,7 +42,8 @@
 }
 
 .projectCardContainer img {
-    width: 30rem;
+    width: 50rem;
+    border-radius: 2em;
     aspect-ratio: 16 / 9;
 }
 
@@ -56,8 +56,11 @@
 }
 
 .descriptionContainer p {
-    font-size: 1rem;
+    font-size: 1.7rem;
     color: #c5ced4c9;
+}
+.descriptionContainer p:nth-of-type(2) {
+    font-size: 1.3rem;
 }
 
 .descriptionContainer p:first-child {
@@ -73,7 +76,7 @@
 .buttonOutlined {
     text-decoration: none;
     padding: 0.75em 2.5em;
-    font-size: 1rem;
+    font-size: 1.2rem;
     background-color: transparent;
     color: #F9BE42;
     border: 1px solid #f9bf4294;
