--- a/src/components/Resume/Content.module.css
+++ b/src/components/Resume/Content.module.css
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 1em;
 }
 
 .label {
@@ -52,63 +53,41 @@
 }
 
 @media (max-width: 1400px) {
+
+    .resume_introduction p:nth-of-type(1),
+    .resume_introduction p:nth-of-type(2) {
+        font-size: 3em;
+    }
+
     .resume_container {
         flex-direction: column;
-        margin-top: 1em;
+        margin-top: 4em;
     }
 
     .education_and_skills_container {
-        margin: 1.4em 10em 5em 20em;
-        width: 75%;
-
+        margin: 3em auto;
+        width: 90%;
     }
 
     .resume_introduction {
-        width: 75%;
-    }
-
-    .aditional_skills_container {
-        width: 50%;
-    }
-
-    .resume_introduction {
-        margin-left: 7em;
-    }
-
-    .education_and_skills_container {
-        margin: 3em 10em 5em 6em;
-    }
-}
-
-@media(max-width: 940px) {
-    .resume_introduction {
-        margin-left: 3em;
-        width: 80vw;
-    }
-
-    .education_and_skills_container {
-        margin-left: 2em;
-    }
-
-    .resume_content {
-        font-size: 1.8em;
-    }
-
-    .skills {
-        width: 90vw;
-        margin-left: 0;
+        width: 90%;
+        margin: 0 auto;
     }
 
     .aditional_skills_container {
         width: 85%;
-        padding: 2em;
     }
 
-    .aditional_skills {
-        font-size: 0.8em;
+    .label,
+    .aditional_skills_container,
+    .aditional_skills,
+    .skills {
+        margin-left: 0;
     }
+}
 
-    .label {
-        font-size: 1.5em;
+@media (max-width: 900px) {
+    .resume_container {
+        margin-top: 1em;
     }
 }
