--- a/src/components/Resume/Education.module.css
+++ b/src/components/Resume/Education.module.css
@@ -13,3 +13,9 @@
     font-size: 1.5em;
     color: #c5ced490;
 }
+
+@media (max-width: 1400px) {
+    .education_container {
+        margin-left: 0;
+    }    
+}
