--- a/src/components/AboutMe/Content.module.css
+++ b/src/components/AboutMe/Content.module.css
@@ -1,42 +1,52 @@
 .container {
     width: 70%;
-    margin: 9em 10em 2em 8em;
+    margin: 2em 10em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
 .btn_container {
-    width: 50%;
+    width: 60%;
 }
+
 @media(max-width: 1600px) {
     .btn_container {
         width: 100%;
     }
 
-    .container{
-        margin: 12em 4em 2em 4em;
+    .container {
+        margin: 2em 4em;
     }
 }
 
 @media(max-width: 1200px) {
-    .btn_container {
-       font-size: 0.7em;
+    .container {
+        margin: 2em 3em;
     }
-    .btn_container button {
-        padding: 1rem auto;
-     }
 }
 
 @media(max-width: 940px) {
     .container {
-        width: 90%;
-        margin: 0 auto;
+        width: 75%;
         gap: 1em;
+        margin: 0 auto;
     }
 
     .btn_container {
         margin: 2em 0;
-        font-size: 0.7em;
+        font-size: 1em;
     }
+}
+
+@media(max-width: 600px) {
+    .container {
+        width: 94%;
+        margin: 0;
+    }
+
+    .btn_container {
+        width: 106%;
+    }
+
 }
