--- a/src/components/AboutMe/Introduction.module.css
+++ b/src/components/AboutMe/Introduction.module.css
@@ -1,5 +1,11 @@
+.container{
+  background-color: #353534;
+  padding: 4em 3em;
+  border-radius: 1rem;
+}
+
 .container p {
-  font-size: 8em;
+  font-size: 6em;
   color: #C5CED4;
   line-height: 1;
   font-weight: 500;
@@ -11,7 +17,7 @@
 
 .container p:nth-of-type(3),
 .container p:nth-of-type(4) {
-  font-size: 2.8em;
+  font-size: 2em;
   color: #c5ced4bd;
   font-weight: 400;
   line-height: 1.3;
@@ -21,33 +27,21 @@ span {
   color: #f9bf42c5;
 }
 
-.hidden{
+.hidden {
   display: none;
 }
 
+@media(max-width: 1330px) {
 
-@media(max-width: 1405px) {
-
-  .container p {
-    font-size: 6em;
+  .container p:nth-of-type(1),
+  .container p:nth-of-type(2) {
+    font-size: 4em;
   }
 
-  .container p:nth-of-type(3) {
-    font-size: 2.5em;
-  }
 }
 
-
-@media(max-width: 1200px) {
-
-
-  .container p:nth-of-type(3) {
-    font-size: 2em;
-  }
-}
-
-@media(max-width: 940px){
-  .container{
-    width: 100%;
+@media(max-width: 940px) {
+  .container {
+    width: 90%;
   }
 }
