--- a/src/components/AboutMe/SideBar.module.css
+++ b/src/components/AboutMe/SideBar.module.css
@@ -4,25 +4,30 @@
     background-color: #353534;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     padding: 2em;
+    border-radius: 1rem;
 }
 
 .profile_photo_container {
     width: 100%;
+    height: 50%;
     margin: 0 auto;
-    height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile_photo {
     background-image: url(/src/assets/profile.jpg);
-    width: 68%;
-    height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     margin: 0 auto;
     background-position: center;
-    aspect-ratio: 16 / 4 !important;
+    width: 30em;
+    height: 30em;
+    aspect-ratio: 1 / 1 !important;
+    border-radius: 50%;
 }
 
 .info_container {
@@ -31,7 +36,7 @@
     justify-content: center;
     gap: 1em;
     width: 100%;
-    height: 25%;
+    height: 40%;
     margin: 0 auto;
     align-content: center;
 }
@@ -49,19 +54,34 @@
 @media(max-width: 940px) {
     .container {
         margin: 3em auto;
-        width: 90%;
-        margin-top: 0;
-    }
-
-    .profile_photo {
-        height: 40em;
-        margin: 2em auto 2.5em;
-        background-size: contain;
+        width: 70%;
+        gap: 2em;
     }
 
     .info_container {
-        width: 100%;
+        width: 90%;
         height: auto;
         padding: 1em;
+    }
+
+    .profile_photo {
+        width: 25em;
+        height: 25em;
+    }
+
+    .info_text {
+        width: 90%;
+    }
+}
+
+@media(max-width: 900px) {
+    .container {
+        margin-top: 0;
+    }
+}
+
+@media(max-width: 600px) {
+    .container {
+        width: 90%;
     }
 }
