--- a/src/components/Resume/AdditionalSkills.module.css
+++ b/src/components/Resume/AdditionalSkills.module.css
@@ -11,3 +11,9 @@
 .additional_skill:hover {
     background-color: #c0c0c03d;
 }
+
+@media (max-width: 600px) {
+    .additional_skill {
+        font-size: 1em;
+    }
+}
