--- a/src/components/AboutMe/SideBar.module.css
+++ b/src/components/AboutMe/SideBar.module.css
@@ -34,21 +34,21 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1em;
     width: 100%;
     height: 40%;
     margin: 0 auto;
-    align-content: center;
+    align-items: center;
 }
 
 .info_text {
-    font-size: 2em;
+    font-size: 1.75em;
     color: #C5CED4;
     font-weight: 400;
     padding: 1em 0.7em;
     border-top: 0.05em solid #91a8c07b;
-    width: 70%;
     margin: 0 auto;
+    width: 70%;
+    text-align: center;
 }
 
 @media(max-width: 940px) {
