--- a/src/components/AboutMe/SideBar.module.css
+++ b/src/components/AboutMe/SideBar.module.css
@@ -11,7 +11,7 @@
 
 .profile_photo_container {
     width: 100%;
-    height: 50%;
+    height: 43%;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -24,8 +24,7 @@
     background-repeat: no-repeat;
     margin: 0 auto;
     background-position: center;
-    width: 30em;
-    height: 30em;
+    width: 50%;
     aspect-ratio: 1 / 1 !important;
     border-radius: 50%;
 }
