--- a/src/components/UI/Button.css
+++ b/src/components/UI/Button.css
@@ -13,7 +13,7 @@
 }
 
 .button:hover {
-    color: #c5ced4c2;
+    color: #d6e1e8c2;
 }
 
 .active {
@@ -23,33 +23,31 @@
 }
 
 .active:hover {
-    border-color: #a98029;
-    color: #a98029;
+    color: #F9BE42;
+    box-shadow: 0 0 15px #F9BE42;
 }
 
 .button_active_big {
     font-size: 2em;
     padding: 1.5rem 4rem;
-    border: 0.1em solid #a98029;
+    border: 0.1em solid #F9BE42;
     border-radius: 50px;
-    color: #a98029;
+    color: #F9BE42;
     background-color: transparent;
     font-weight: 400;
     width: 100%;
     cursor: pointer;
-    transition: color 0.3s ease, border-color 0.3s ease;
-
+    transition: color 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
 
 .button_active_big a {
     text-decoration: none;
-    color: #a98029;
+    color: #F9BE42;
 }
 
 .button_active_big:hover {
-    border-color: #F9BE42;
-    color: #F9BE42;
+    box-shadow: 0 0 15px #F9BE42;
 }
 
 @media(max-width: 1330px) {
