--- a/src/components/AboutMe/SideBar.module.css
+++ b/src/components/AboutMe/SideBar.module.css
@@ -7,11 +7,12 @@
     justify-content: center;
     padding: 2em;
     border-radius: 1rem;
+    gap: 5rem;
 }
 
 .profile_photo_container {
     width: 100%;
-    height: 43%;
+    height: 40%;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -34,7 +35,7 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 40%;
+    height: 36%;
     margin: 0 auto;
     align-items: center;
 }
@@ -51,6 +52,10 @@
 }
 
 @media(max-width: 940px) {
+    .profile_photo {
+        width: 40%;
+    }
+
     .container {
         margin: 3em auto;
         width: 70%;
@@ -61,11 +66,6 @@
         width: 90%;
         height: auto;
         padding: 1em;
-    }
-
-    .profile_photo {
-        width: 25em;
-        height: 25em;
     }
 
     .info_text {
