--- a/src/components/AboutMe/SideBar.module.css
+++ b/src/components/AboutMe/SideBar.module.css
@@ -7,7 +7,7 @@
     justify-content: center;
     padding: 2em;
     border-radius: 1rem;
-    gap: 5rem;
+    gap: 2rem;
 }
 
 .profile_photo_container {
@@ -25,7 +25,7 @@
     background-repeat: no-repeat;
     margin: 0 auto;
     background-position: center;
-    width: 50%;
+    min-width: 20em;
     aspect-ratio: 1 / 1 !important;
     border-radius: 50%;
 }
