--- a/src/components/Projects/Content.module.css
+++ b/src/components/Projects/Content.module.css
@@ -12,12 +12,11 @@
 .categoryButton,
 .categoryButtonActive {
     padding: 0.75em 4.75em;
-    font-size: 1.25rem;
     border: none;
     border-radius: 1.75em;
     background-color: #6C6C6C;
     color: #C5CED4;
-    font-size: 1.25rem;
+    font-size: 1rem;
     font-weight: 500;
     cursor: pointer;
     z-index: 10000;
@@ -34,7 +33,7 @@
 
 .projectsContainer {
     display: grid;
-    gap: 4em;
+    gap: 2em;
     margin: 1.75rem 0;
 }
 
@@ -47,10 +46,15 @@
     margin-bottom: 1.6rem;
 }
 
-.projectCardContainer img {
+.imgContainer {
     width: 40%;
+    aspect-ratio: 16/9;
+}
+
+.projectCardContainer img {
+    width: 100%;
+    height: 100%;
     border-radius: 2em;
-    aspect-ratio: 16 / 9;
 }
 
 .descriptionContainer {
@@ -63,19 +67,19 @@
 
 .descriptionContainer p,
 .descriptionContainer div:first-of-type {
-    font-size: 1.7rem;
+    font-size: 1rem;
     color: #c5ced4c9;
 }
 
-.descriptionContainer div:first-of-type{
-    font-size: 1rem;
+.descriptionContainer div:first-of-type {
+    font-size: rem;
 }
 
-.descriptionContainer div:first-of-type div{
+.descriptionContainer div:first-of-type div {
     margin-bottom: 1em;
 }
 
-.descriptionContainer div:first-of-type div:last-of-type{
+.descriptionContainer div:first-of-type div:last-of-type {
     color: #F9BE42;
 }
 
@@ -92,7 +96,7 @@
 .buttonOutlined {
     text-decoration: none;
     padding: 0.75em 2.5em;
-    font-size: 1.2rem;
+    font-size: 1rem;
     background-color: transparent;
     color: #F9BE42;
     border: 1px solid #f9bf4294;
@@ -116,7 +120,7 @@
         flex-direction: column;
     }
 
-    .projectCardContainer img {
+    .imgContainer  {
         width: 100%;
     }
 
@@ -154,6 +158,7 @@
 }
 
 @media (max-width: 660px) {
+
     .categoryButton,
     .categoryButtonActive,
     .buttonOutlined {
@@ -163,6 +168,7 @@
 }
 
 @media (max-width: 500px) {
+
     .categoryButton,
     .categoryButtonActive,
     .buttonOutlined {
