--- a/src/components/Projects/Content.module.css
+++ b/src/components/Projects/Content.module.css
@@ -55,6 +55,7 @@
     width: 100%;
     height: 100%;
     border-radius: 2em;
+    object-fit: cover; 
 }
 
 .descriptionContainer {
@@ -95,7 +96,7 @@
 
 .buttonOutlined {
     text-decoration: none;
-    padding: 0.75em 2.5em;
+    padding: 0.75em 1em;
     font-size: 1rem;
     background-color: transparent;
     color: #F9BE42;
@@ -120,7 +121,7 @@
         flex-direction: column;
     }
 
-    .imgContainer  {
+    .imgContainer {
         width: 100%;
     }
 
