--- a/src/components/UI/Button.css
+++ b/src/components/UI/Button.css
@@ -1,7 +1,7 @@
 .button {
     font-size: 1.2em;
     padding: 0.5rem 1.5rem;
-    border: 0.1em solid transparent;
+    border: 0.1rem solid transparent;
     border-radius: 50em;
     background-color: transparent;
     color: #c5ced481;
