--- a/src/components/Projects/Content.module.css
+++ b/src/components/Projects/Content.module.css
@@ -21,6 +21,11 @@
     cursor: pointer;
     z-index: 10000;
     text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+.categoryButtonActive:hover {
+    background-color: #525252;
 }
 
 .hidden {
@@ -29,6 +34,10 @@
 
 .categoryButton {
     background-color: #3E3E3E;
+}
+
+.categoryButton:hover {
+    background-color: #6C6C6C;
 }
 
 .projectsContainer {
@@ -48,14 +57,13 @@
 
 .imgContainer {
     width: 40%;
-    aspect-ratio: 16/9;
 }
 
 .projectCardContainer img {
     width: 100%;
     height: 100%;
     border-radius: 2em;
-    object-fit: cover; 
+    object-fit: cover;
 }
 
 .descriptionContainer {
@@ -80,18 +88,20 @@
     margin-bottom: 1em;
 }
 
-.descriptionContainer div:first-of-type div:last-of-type {
+.project div div:last-of-type {
     color: #F9BE42;
 }
 
 .descriptionContainer p:first-child {
+    font-size: 1.5em;
     font-weight: 600;
     color: #C5CED4;
 }
 
 .links {
     display: flex;
-    gap: 1rem;
+    flex-wrap: wrap;
+    gap: 0.75rem;
 }
 
 .buttonOutlined {
@@ -103,13 +113,13 @@
     border: 1px solid #f9bf4294;
     border-radius: 2em;
     transition: box-shadow 0.3s ease;
-
 }
 
-/* .buttonOutlined:hover {
-    background-color: #f9bf4224;
-    color: white;
-} */
+.project{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
 
 .buttonOutlined:hover {
     box-shadow: 0 0 15px #F9BE42;
